Transformed DAOs to Repositories using Spring Data JPA + deleted useless CustomerController.java